# P2P_Knowledge_Hub

./: .gitignore  \  config.toml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 7913ae7db144_create_document_table.py  9d38f6e203bb_.py
docs/: architecture.md  decisions.md
src/p2p_knowledge_hub/core/: logger.py
src/p2p_knowledge_hub/exceptions/: base.py
src/p2p_knowledge_hub/ingestion/: hashing.py
src/p2p_knowledge_hub/models/: document.py
src/p2p_knowledge_hub/models/db/: document.py  sessions.py
src/p2p_knowledge_hub/repositories/: base_repository.py  document_repository.py
src/p2p_knowledge_hub/settings/: __init__.py  db.py  exceptions.py  logging_config.py  main.py  run_time_config.py
src/p2p_knowledge_hub/unit_of_work/: base.py  sqlalchemy.py
