[project]
name = "p2p-knowledge-hub"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Santhosh Kumar", email = "santhosh90612@gmail.com" }]
maintainers = [{ name = "Santhosh Kumar", email = "santhosh90612@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


dependencies = ["pydantic>=2.13.4", "pydantic-settings>=2.14.2", "rich>=15.0.0"]
[project.scripts]
p2p-hub = "p2p_knowledge_hub.__main__:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/p2p_knowledge_hub"]

[dependency-groups]
dev = ["just>=0.8.165", "ruff>=0.15.22"]
